# newtype-rs

./: .gitignore  Cargo.toml  README.md
examples/shortid/: main.rs
examples/userid/: main.rs
src/: error.rs  lib.rs
