[package]
name = "simple-newtype"
version = "0.1.2"
description = "Simple newtype macros for application development."
edition = "2021"
license-file = "LICENSE"
rust-version = "1.85"
readme = "README.md"
homepage = "https://docs.rs/simple-newtype"
documentation = "https://docs.rs/simple-newtype"
repository = "https://github.com/ecociel/newtype-rs"
authors = ["Jan Algermissen <jan.algermissen@ecociel.ch>"]
keywords = ["newtype"]
categories = []



[dependencies]
thiserror = "1"

[dev-dependencies]
uuid = { version = "1.7.0", features = ["v4"] }


